--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="/src/lib/data.tsx"></script>
     <script type="module" src="/src/main.jsx"></script>
     <script>
       let title = document.querySelector(".title");
